# pydantic_jsonschema

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yaml
pydantic_jsonschema/: parser.py
tests/: test_all_of.py  test_definitions.py  test_enums.py  test_one_of.py  test_optional_properties.py  test_properties.py  test_properties_from_file.py  test_unique_items.py
